# appointment-schedular

./: .gitignore  CMakeLists.txt  README.md
docs/: ai_collaboration.md  implementation_plan.md  initial_feature_tests.md
docs/feature_specs/: implement_epoch.md
src/: Appointment.cpp  Appointment.h  AppointmentManager.cpp  AppointmentManager.h  Date.cpp  Date.h  DateTime.cpp  DateTime.h  Location.cpp  Location.h  Memo.cpp  Memo.h  Time.cpp  Time.h  main.cpp
tests/: test_main.cpp
